shelter/our_pets.css
body {
  min-height: 100vh;
  padding: 0;

  font-family: "Georgia", sans-serif;
}

@font-face {
  font-family: Georgia;
  src: url("assets/fonts/georgia/georgia.ttf");
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

.logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.logo__title {
  color: var(--color-dark-l, #545454);

  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: 110%;
  /* 35.2px */
  letter-spacing: 1.92px;
}

.logo__subtitle {
  color: var(--color-dark-l, #545454);
  /* logo_subtitle */
  font-family: Arial;
  font-size: 13px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 1.3px;
}

.logo__link {
  text-decoration: none;
}

.section-main {
  display: flex;
  align-items: center;

  padding: 180px 40px 0 40px;
}

.section-main {
  background: url("./assets/start-screen-puppy.png") right bottom no-repeat;
}

.container-main {
  flex-shrink: 0;
}

.section-main__content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 42px;
  margin-top: 163px;
  margin-bottom: 243px;
}


.container {
  max-width: 1280px;
  margin: 0 auto;
}

@media only screen and (max-width: 1060px) {
  .container {
    max-width: 100%;
  }
}

.header-wrapper {
  display: flex;
  justify-content: space-between;
  padding: 30px 40px;

  align-items: center;
}

@media only screen and (max-width: 1060px) {
  .header-wrapper {
    padding: 30px;
  }
}

@media only screen and (max-width: 715px) {
  .nav {
    display: none;
  }
}

.nav-list {
  display: flex;
  justify-content: flex-end;
  flex-shrink: 0;
  list-style: none;
  height: 27px;
  gap: 35px;
}

.paragraph-l {
  font-family: Arial;
  font-size: 15px;
  font-style: normal;
  font-weight: 400;
  line-height: 160%;
  /* 24px */
}

.nav-link {
  position: relative;
  font-family: Arial;
  font-size: 15px;
  font-style: normal;
  font-weight: 400;
  line-height: 160%;
  /* 24px */

  text-decoration: none;
  color: var(--color-dark-l, #545454);

  transition: 0.25s;
}

.nav-item .nav-link:hover {
  color: var(--color-dark-3xl, #292929);
  transition: 0.25s;
}

.nav-link:active,
.nav-link:focus {
  outline: none;
}

.nav-item .nav-link:active,
.nav-item .nav-link:focus {
  padding-bottom: 3px;
  border-bottom: 3px solid var(--color-primary, #f1cdb3);
  color: var(--color-dark-l, #545454);
  transition: 0s;
}

.nav-link_active {
  padding-bottom: 3px;
  border-bottom: 3px solid var(--color-primary, #f1cdb3);
  color: var(--color-dark-l, #545454);
  outline: none;
  text-decoration: none;
}

.h2 {
  font-family: Georgia;
  font-size: 44px;
  font-style: normal;
  font-weight: 400;
  line-height: 130%;
  /* 57.2px */
}

.white {
  color: var(--color-light-xl, #fff);
}

.grey {
  color: var(--color-dark-s, #cdcdcd);
}

.button_colored {
  display: flex;
  padding: 15px 45px;
  flex-direction: column;
  align-items: center;
  gap: 10px;

  color: var(--color-dark-3xl, #292929);
  font-family: Georgia;
  font-size: 17px;
  font-style: normal;
  font-weight: 400;
  line-height: 130%;
  /* 22.1px */
  letter-spacing: 1.02px;

  border: none;

  border-radius: 100px;
  background: var(--color-primary, #f1cdb3);
  transition: 0.25s;
}

.button_colored:hover {
  background: var(--color-primary-light, #fddcc4);
  transition: 0.25s;
  cursor: pointer;
}

.h3 {
  font-family: Georgia;
  font-size: 35px;
  font-style: normal;
  font-weight: 400;
  line-height: 130%;
  /* 45.5px */
  letter-spacing: 2.1px;
}

@media only screen and (max-width: 650px) {
  .h3 {
    font-size: 25px;
    letter-spacing: 1.5px;
  }
}


.dark-l {
  color: var(--color-dark-xl, #4c4c4c);
}

.light-xl {
  color: var(--color-light-xl, #fff);
}

.footer__link p {
  text-align: left;
}

.section-help__title {
  width: 308px;
  text-align: center;
}

.h4 {
  color: var(--color-dark-l, #545454);
  text-align: center;
  /* h4 */
  font-family: Georgia;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 115%;
  /* 23px */
  letter-spacing: 1.2px;
}

.background-wraper-pets {
  background: var(--color-light-l, #f6f6f6);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.background-wraper-donation {
  background: var(--color-light-l, #f6f6f6);
}

.section-pets {
  display: flex;
  padding: 80px 40px 100px 40px;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
}


@media only screen and (max-width: 1060px) {
  .section-pets {
    padding: 60px 30px 70px 30px;
  }
}

.section-pets__placeholder {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 50px;
}

.section-pets__carusel-cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 30px 40px;
}

@media only screen and (max-width: 1060px) {
  .section-pets__carusel-cards {
    padding: 0 64px;
    justify-content: center;
  }
}

@media only screen and (max-width: 550px) {
  .section-pets__carusel-cards {
    padding: 0 25px;
  }
}

.section-pets__pagination {
  display: flex;
  flex-direction: column;
  gap: 45px;
}

.footer__background-wraper {
  background: url("./assets/noise_transparent@2x.png"),
    radial-gradient(237.5% 111.8% at 0% 0%, #5b483a 0%, #262425 100%);
}

.footer__content-placeholder {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  flex-shrink: 0;

  padding: 40px 40px 0px 40px;
}

@media only screen and (max-width: 1050px) {
  .footer__content-placeholder {
    flex-wrap: wrap;
  }
}

@media only screen and (max-width: 650px) {
  .footer__content-placeholder {
    padding: 30px 10px 0px 10px;
    gap: 40px;
  }
}

.footer__content-placeholder {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.footer__questions {
  padding-top: 16px;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.footer__places {
  padding-top: 16px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 234px;
  gap: 35px;
}

.color-primary {
  color: var(--color-primary, #f1cdb3);
}

.color-primary-light {
  color: var(--color-primary-light, #fddcc4);
}

.footer__link {
  display: flex;
  align-items: center;
  color: var(--color-primary, #f1cdb3);
  gap: 20px;
}

.footer__link:hover {
  color: var(--color-primary-light, #fddcc4);
}

.h4 {
  font-family: Georgia;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 115%;
  /* 23px */
  letter-spacing: 1.2px;
}

.section-pets__name {
  color: var(--color-dark-l, #545454);
  text-align: center;
  font-family: Georgia;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 1.2px;
}

.button_bodered {
  display: flex;
  padding: 15px 45px;
  flex-direction: column;
  align-items: center;
  gap: 10px;

  color: var(--color-dark-3xl, #292929);
  font-family: Georgia;
  font-size: 17px;
  font-style: normal;
  font-weight: 400;
  line-height: 130%;
  /* 22.1px */
  letter-spacing: 1.02px;

  border-radius: 100px;
  border: 2px solid #f1cdb3;
  background: var(--color-light-s, #fafafa);
  transition: 0.3s;
}

.button_bodered:hover {
  border-radius: 100px;
  background: var(--color-primary-light, #fddcc4);
  border: 2px solid var(--color-primary-light, #fddcc4);
  transition: 0.3s;
  cursor: pointer;
}

.section-pets__card {
  background: var(--color-light-s, #fafafa);
  display: flex;
  padding-bottom: 30px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 9px;
  gap: 30px;
  transition: 0.3s;
}


@media only screen and (max-width: 800px) {
  .pet768 {
    display: none;
  }
}

@media only screen and (max-width: 650px) {
  .pet320 {
    display: none;
  }
}

.section-pets__card:hover {
  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
  transition: 0.3s;
}

.circle {
  width: 52px;
  height: 52px;
  border-radius: 50%;

  display: flex;
  align-items: center;
  justify-content: center;

  transition: 0.3s;
}

.circle-normal {
  border: 2px solid #f1cdb3;
}

.circle-disabled {

  cursor: default;
  color: #CDCDCD;
  border: solid 2px #CDCDCD;
}

.circle-active {
  cursor: default;
  background: #fddcc4;
  border: 2px solid #fddcc4;
}

.circle-normal:hover {
  background: #fddcc4;
  border: 2px solid #fddcc4;
  transition: 0.3s;
  cursor: pointer;
}

.section-pets__carusel {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.section-pets__title {
  width: 400px;
  text-align: center;
}

@media only screen and (max-width: 650px) {
  .section-pets__title {
    width: 100%;
  }
}

.footer__content-placeholder a {
  text-decoration: none;
}

.pagination {
  display: flex;
  gap: 20px;
}

@media only screen and (max-width: 650px) {
  .pagination {
    gap: 10px;
  }
}

.footer__puppy {
  max-width: 100%;
  width: auto;
  height: auto;
}

.burger {
  display: none;
}

.burger {
  width: 30px;
  height: 22px;
  flex-direction: column;
  justify-content: space-between;
}

.burger_line {
  height: 2px;
  background-color: black;
}

@media only screen and (max-width: 715px) {
  .burger {
    display: flex;
  }
}

